Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1397766: Tomorrow Report fails to This Week
 - Fixed bug 1387646: Repeated events are not shown repeatedly
 - Fixed bug 1386705: Two errors in install scripts (PostgreSQL)
 - Added option to disable small months
 - Added Previews to themes
 - Fixed bug 1375089: Repeating evens miss final day of repeat
 - Fixed bug 1379707: Repeating event ends one day early
 - Imlemented PATCH 1380867: improved ical support
 - Fixed bug  1385557: calendar inputs can cause crash
 - Added feature to email ics attachment to external participants
   This address bug 1384838 and RFE 1384842
 - Fixed bug 1385433: External Users not deleted with event
 - Changed 'Display Weekends' to affect all pages
 - Added support for themes
 - Added support for IBM DB2
 - Added support for binary objects for MySQL and SQLite.  This includes
   new support for event attachements and event comments.
   (Still need to implement for other databases.)
 - Fixed vuln in layers: published vulnerability in layers_toggle.php
   was fixed
 - Fixed bug 1370871: public access - preferences cannot be saved
 - Fixed bug 1366113: Accept/reject Missing
 - Fixed problem with dates in nonuser calendar if LANGAUGE_DEFINED
 - Fixed bug 1369715: Event for groups hangs - javascript error perhaps
 - Fixed bug 1368071: category pop-up for tasks will not work properly
 - Fixed vulnerablity: SQL injection possible in edit_template.php,
   activity_log.php, admin_handler.php, pref_handler.php, export_handler.php
 - Fixed bug 1365435: "Availability...." has no action by clicking the button (tasks)
 - Fixed bug 1368088: viewing tasks depends on their belonging selected categories
 - Fixed bug 1365541: categories for tasks will not be saved
 - Fixed bug 1365452: 'Category' - pop-up cannot be translated completely
 - Fixed bug 1363734: 'Not available' will not be translated in admin.php
   Added logic to translate OVERRIDE_PUBLIC_TEXT if default value